Fixes #23